--- a/plugins/org.but4reuse.adapters.pluginosgi/plugin.xml
+++ b/plugins/org.but4reuse.adapters.pluginosgi/plugin.xml
@@ -4,7 +4,7 @@
    <extension
          point="org.but4reuse.adapters">
       <adapter
-            class="org.but4reuse.adapters.pluginosgi.EclipseAdapter"
+            class="org.but4reuse.adapters.pluginosgi.PluginOsgiAdapter"
             icon="icons/icon_eclipse.png"
             id="pluginosgi"
             name="Plug-in OSGI">
