--- a/plugins/org.but4reuse.adapters.pluginosgi/build.properties
+++ b/plugins/org.but4reuse.adapters.pluginosgi/build.properties
@@ -2,5 +2,6 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                plugin.xml,\
-               icons/
+               icons/,\
+               plantuml.jar
 
