--- a/plugins/org.but4reuse.adapters.pluginosgi/.classpath
+++ b/plugins/org.but4reuse.adapters.pluginosgi/.classpath
@@ -4,5 +4,11 @@
 	<classpathentry exported="true" kind="lib" path="plantuml.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
+	<classpathentry kind="lib" path="lib/asm-6.0.jar"/>
+	<classpathentry kind="lib" path="lib/asm-analysis-6.0.jar"/>
+	<classpathentry kind="lib" path="lib/asm-commons-6.0.jar"/>
+	<classpathentry kind="lib" path="lib/asm-tree-6.0.jar"/>
+	<classpathentry kind="lib" path="lib/asm-util-6.0.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.osgi_3.7.1.R37x_v20110808-1106.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
