ajout lib dans le runtime

--- a/plugins/org.but4reuse.adapters.pluginosgi/build.properties
+++ b/plugins/org.but4reuse.adapters.pluginosgi/build.properties
@@ -3,5 +3,11 @@ output.. = bin/
 bin.includes = META-INF/,\
                plugin.xml,\
                icons/,\
-               plantuml.jar
+               plantuml.jar,\
+               lib/asm-6.0.jar,\
+               lib/asm-analysis-6.0.jar,\
+               lib/asm-commons-6.0.jar,\
+               lib/asm-tree-6.0.jar,\
+               lib/asm-util-6.0.jar,\
+               lib/org.eclipse.osgi_3.7.1.R37x_v20110808-1106.jar
 
